// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MediaLibraryCard should match snapshot for draft image 1`] = `
<DocumentFragment>
  .emotion-10 {
  width: 100px;
  height: 240px;
  margin: 10px;
  border: solid 2px #dfdfe3;
  border-radius: 5px;
  cursor: pointer;
  overflow: hidden;
}

.emotion-10:focus {
  outline: none;
}

.emotion-0 {
  border: 0;
  border-radius: 5px;
  cursor: pointer;
  height: 36px;
  line-height: 36px;
  font-weight: 500;
  padding: 0 15px;
  background-color: #798291;
  color: #fff;
  background-color: #798291;
  color: #fff;
  box-shadow: 0 2px 6px 0 rgba(68,74,87,0.05),0 1px 3px 0 rgba(68,74,87,0.1);
  margin: 0;
  padding: 0;
  width: 36px;
  position: absolute;
  top: 5px;
  right: 5px;
  z-index: 2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0:focus,
.emotion-0:hover {
  color: #fff;
  background-color: #555a65;
}

.emotion-0 a {
  color: inherit;
  cursor: pointer;
}

.emotion-6 {
  height: 162px;
  background-color: #f2f2f2;
  background-size: 16px 16px;
  background-position: 0 0,8px 8px;
  background-image: linear-gradient( 45deg, #e6e6e6 25%, transparent 25%, transparent 75%, #e6e6e6 75%, #e6e6e6 ) , linear-gradient( 45deg, #e6e6e6 25%, transparent 25%, transparent 75%, #e6e6e6 75%, #e6e6e6 );
  box-shadow: inset 0 0 4px rgba(68,74,87,0.3);
  border-bottom: solid 2px #dfdfe3;
  position: relative;
}

.emotion-4 {
  width: 100%;
  height: 160px;
  object-fit: contain;
  border-radius: 2px 2px 0 0;
}

.emotion-8 {
  color: #798291;
  padding: 8px;
  margin-top: 20px;
  overflow-wrap: break-word;
  line-height: 1.3 !important;
}

.emotion-2 {
  color: #70399f;
  background-color: #f6d8ff;
  position: absolute;
  padding: 8px;
  border-radius: 5px 0px 5px 0;
}

<div
    class="emotion-10 emotion-11"
    height="240px"
    tabindex="-1"
    width="100px"
  >
    <label
      class="nc-fileDownloadButton emotion-0 emotion-1"
    >
      <a
        download=""
        href="url"
      >
        <span>
          <svg
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
            />
            <polyline
              points="7 10 12 15 17 10"
            />
            <line
              x1="12"
              x2="12"
              y1="15"
              y2="3"
            />
          </svg>
        </span>
      </a>
    </label>
    <div
      class="emotion-6 emotion-7"
    >
      <p
        class="emotion-2 emotion-3"
        data-testid="draft-text"
      >
        Draft
      </p>
      <img
        class="emotion-4 emotion-5"
        src="url"
      />
    </div>
    <p
      class="emotion-8 emotion-9"
    >
      image.png
    </p>
  </div>
</DocumentFragment>
`;

exports[`MediaLibraryCard should match snapshot for non draft image 1`] = `
<DocumentFragment>
  .emotion-8 {
  width: 100px;
  height: 240px;
  margin: 10px;
  border: solid 2px #dfdfe3;
  border-radius: 5px;
  cursor: pointer;
  overflow: hidden;
}

.emotion-8:focus {
  outline: none;
}

.emotion-0 {
  border: 0;
  border-radius: 5px;
  cursor: pointer;
  height: 36px;
  line-height: 36px;
  font-weight: 500;
  padding: 0 15px;
  background-color: #798291;
  color: #fff;
  background-color: #798291;
  color: #fff;
  box-shadow: 0 2px 6px 0 rgba(68,74,87,0.05),0 1px 3px 0 rgba(68,74,87,0.1);
  margin: 0;
  padding: 0;
  width: 36px;
  position: absolute;
  top: 5px;
  right: 5px;
  z-index: 2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0:focus,
.emotion-0:hover {
  color: #fff;
  background-color: #555a65;
}

.emotion-0 a {
  color: inherit;
  cursor: pointer;
}

.emotion-4 {
  height: 162px;
  background-color: #f2f2f2;
  background-size: 16px 16px;
  background-position: 0 0,8px 8px;
  background-image: linear-gradient( 45deg, #e6e6e6 25%, transparent 25%, transparent 75%, #e6e6e6 75%, #e6e6e6 ) , linear-gradient( 45deg, #e6e6e6 25%, transparent 25%, transparent 75%, #e6e6e6 75%, #e6e6e6 );
  box-shadow: inset 0 0 4px rgba(68,74,87,0.3);
  border-bottom: solid 2px #dfdfe3;
  position: relative;
}

.emotion-2 {
  width: 100%;
  height: 160px;
  object-fit: contain;
  border-radius: 2px 2px 0 0;
}

.emotion-6 {
  color: #798291;
  padding: 8px;
  margin-top: 20px;
  overflow-wrap: break-word;
  line-height: 1.3 !important;
}

<div
    class="emotion-8 emotion-9"
    height="240px"
    tabindex="-1"
    width="100px"
  >
    <label
      class="nc-fileDownloadButton emotion-0 emotion-1"
    >
      <a
        download=""
        href="url"
      >
        <span>
          <svg
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
            />
            <polyline
              points="7 10 12 15 17 10"
            />
            <line
              x1="12"
              x2="12"
              y1="15"
              y2="3"
            />
          </svg>
        </span>
      </a>
    </label>
    <div
      class="emotion-4 emotion-5"
    >
      <img
        class="emotion-2 emotion-3"
        src="url"
      />
    </div>
    <p
      class="emotion-6 emotion-7"
    >
      image.png
    </p>
  </div>
</DocumentFragment>
`;

exports[`MediaLibraryCard should match snapshot for non viewable image 1`] = `
<DocumentFragment>
  .emotion-8 {
  width: 100px;
  height: 240px;
  margin: 10px;
  border: solid 2px #dfdfe3;
  border-radius: 5px;
  cursor: pointer;
  overflow: hidden;
}

.emotion-8:focus {
  outline: none;
}

.emotion-0 {
  border: 0;
  border-radius: 5px;
  cursor: pointer;
  height: 36px;
  line-height: 36px;
  font-weight: 500;
  padding: 0 15px;
  background-color: #798291;
  color: #fff;
  background-color: #798291;
  color: #fff;
  box-shadow: 0 2px 6px 0 rgba(68,74,87,0.05),0 1px 3px 0 rgba(68,74,87,0.1);
  margin: 0;
  padding: 0;
  width: 36px;
  position: absolute;
  top: 5px;
  right: 5px;
  z-index: 2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0:focus,
.emotion-0:hover {
  color: #fff;
  background-color: #555a65;
}

.emotion-0 a {
  color: inherit;
  cursor: pointer;
}

.emotion-4 {
  height: 162px;
  background-color: #f2f2f2;
  background-size: 16px 16px;
  background-position: 0 0,8px 8px;
  background-image: linear-gradient( 45deg, #e6e6e6 25%, transparent 25%, transparent 75%, #e6e6e6 75%, #e6e6e6 ) , linear-gradient( 45deg, #e6e6e6 25%, transparent 25%, transparent 75%, #e6e6e6 75%, #e6e6e6 );
  box-shadow: inset 0 0 4px rgba(68,74,87,0.3);
  border-bottom: solid 2px #dfdfe3;
  position: relative;
}

.emotion-6 {
  color: #798291;
  padding: 8px;
  margin-top: 20px;
  overflow-wrap: break-word;
  line-height: 1.3 !important;
}

.emotion-2 {
  width: 100%;
  height: 160px;
  object-fit: cover;
  border-radius: 2px 2px 0 0;
  padding: 1em;
  font-size: 3em;
}

<div
    class="emotion-8 emotion-9"
    height="240px"
    tabindex="-1"
    width="100px"
  >
    <label
      class="nc-fileDownloadButton emotion-0 emotion-1"
    >
      <a
        download=""
        href="url"
      >
        <span>
          <svg
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
            />
            <polyline
              points="7 10 12 15 17 10"
            />
            <line
              x1="12"
              x2="12"
              y1="15"
              y2="3"
            />
          </svg>
        </span>
      </a>
    </label>
    <div
      class="emotion-4 emotion-5"
    >
      <div
        class="emotion-2 emotion-3"
        data-testid="card-file-icon"
      >
        Not Viewable
      </div>
    </div>
    <p
      class="emotion-6 emotion-7"
    >
      image.png
    </p>
  </div>
</DocumentFragment>
`;
